# dic-commentator

./: .gitignore  README.md  pyproject.toml
src/: feedback.py  main.py  narrow_err.py
src/utils/: model.py  test_trainer.py  train_trainer.py  utils.py
