[project]
name = "confidence-calculater"
version = "0.1.0"
description = "Add your description here"
authors = [{ name = "Yuka Otsuki", email = "data2000analysis@gmail.com" }]
dependencies = [
    "transformers[torch]>=4.44.0",
    "datasets>=2.21.0",
    "torch>=2.4.0",
    "pandas>=2.2.2",
    "sentencepiece>=0.2.0",
    "protobuf>=5.27.3",
    "fire>=0.6.0",
    "ipykernel>=6.29.5",
    "scikit-learn>=1.5.1",
    "matplotlib>=3.9.2",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/confidence_calculater"]
